--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <!-- Open Graph -->
     <meta property="og:title" content="Yunn Thu Thu (Bebee) | Frontend Developer" />
-    <meta property="og:description" content="Portfolio showcasing my frontend development projects and UI design work." />
+    <meta property="og:description" content="Portfolio showcasing dfgdfgd my frontend development projects and UI design work." />
     <meta property="og:type" content="website" />
-   
+    <meta property="og:url" content="https://yunn-bebee.github.io">
     <meta property="og:image" content="https://yunn-bebee.github.io/1.png">
 
     <!-- Favicons -->
