--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 <!-- Project 1 -->
                 <div class="project-card bg-white rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal(1)">
                     <div class="h-48 relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" 
+                        <img src="./images/mv.png" 
                              alt="Moonvale University Magazine" 
                              class="w-full h-full object-cover project-image">
                         <div class="absolute top-4 right-4 bg-white text-purple-600 px-3 py-1 rounded-full text-sm font-bold">React</div>
@@ -420,7 +420,7 @@
                 <!-- Project 2 -->
                 <div class="project-card bg-white rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal(2)">
                     <div class="h-48 relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1593508512255-86ab42a8e620?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1178&q=80" 
+                        <img src="./images/image.png" 
                              alt="Bezie OS" 
                              class="w-full h-full object-cover project-image">
                         <div class="absolute top-4 right-4 bg-white text-blue-600 px-3 py-1 rounded-full text-sm font-bold">HTML/CSS</div>
@@ -442,7 +442,7 @@
                 <!-- Project 3 -->
                 <div class="project-card bg-white rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal(3)">
                     <div class="h-48 relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1504280390367-361c6d9f38f4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" 
+                        <img src="./images/beecamp.png" 
                              alt="Retail Camping Co." 
                              class="w-full h-full object-cover project-image">
                         <div class="absolute top-4 right-4 bg-white text-pink-600 px-3 py-1 rounded-full text-sm font-bold">HTML/CSS</div>
@@ -611,7 +611,7 @@
             
             <div class="flex flex-col lg:flex-row gap-12 max-w-6xl mx-auto">
                 <div class="lg:w-1/2">
-                    <form class="space-y-6" action="https://formsubmit.co/yunn.beebee@gmail.com" method="POST">
+                    <form class="space-y-6" action="https://formsubmit.co/685cc027f6af3d06d6688705792e61a7" method="POST">
                         <div>
                             <label for="name" class="block text-gray-700 mb-2">Name</label>
                             <input type="text" name="name" id="name" class="contact-input w-full px-4 py-3 rounded-lg bg-white border border-gray-300 focus:outline-none transition" placeholder="Your name">
