--- a/index.html
+++ b/index.html
@@ -551,8 +551,11 @@
             <div class="text-center mb-16">
                 <h2 class="section-title text-3xl md:text-4xl font-bold mb-4 inline-block">Volunteer Experience</h2>
             </div>
-            
+         
             <div class="max-w-3xl mx-auto card-gradient p-8 rounded-xl">
+                   <div class="flex justify-center mb-8">
+                <img src="./images/volunteer.jpg" alt="Volunteer Experience" class="rounded-xl shadow-lg w-full h-[60vh] object-cover">
+            </div>
                 <h3 class="text-2xl font-bold mb-4">British Council Library</h3>
                 <p class="text-gray-700 mb-4">
                     Assisted with organizing materials, supporting visitors, and managing administrative tasks. 
